--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE_USERNAME='root'
 DATABASE_PASSWORD='aaaa4321'
 DATABASE_NAME='board'
 DATABASE_SYNCHRONIZE=true
+
+JWT_SECRET = 'bamyangang'
